--- a/aiotg.html
+++ b/aiotg.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>aiotg reference &#8212; aiotg 0.7.15 documentation</title>
+    <title>aiotg reference &#8212; aiotg 0.7.16 documentation</title>
     
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0.7.15',
+        VERSION:     '0.7.16',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="prev" title="aiotg 0.7.15" href="index.html" />
+    <link rel="prev" title="aiotg" href="index.html" />
    
   <link rel="stylesheet" href="_static/custom.css" type="text/css" />
   
@@ -935,7 +935,7 @@ The bot must be an administrator in the group for this to work.</p>
 <h3>Related Topics</h3>
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
-      <li>Previous: <a href="index.html" title="previous chapter">aiotg 0.7.15</a></li>
+      <li>Previous: <a href="index.html" title="previous chapter">aiotg</a></li>
   </ul></li>
 </ul>
 </div>
