--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Index &#8212; aiotg 0.7.16 documentation</title>
+    <title>Index &#8212; aiotg 0.7.21 documentation</title>
     
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -15,7 +15,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0.7.16',
+        VERSION:     '0.7.21',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -62,19 +62,22 @@
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
  | <a href="#U"><strong>U</strong></a>
+ | <a href="#W"><strong>W</strong></a>
  
 </div>
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="aiotg.html#aiotg.bot.Bot.add_command">add_command() (aiotg.bot.Bot method)</a>
+</li>
       <li><a href="aiotg.html#module-aiotg">aiotg (module)</a>
 </li>
       <li><a href="aiotg.html#module-aiotg.bot">aiotg.bot (module)</a>
 </li>
-      <li><a href="aiotg.html#module-aiotg.chat">aiotg.chat (module)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="aiotg.html#module-aiotg.chat">aiotg.chat (module)</a>
+</li>
       <li><a href="aiotg.html#aiotg.bot.CallbackQuery.answer">answer() (aiotg.bot.CallbackQuery method)</a>
 
       <ul>
@@ -101,13 +104,15 @@
 </li>
       <li><a href="aiotg.html#aiotg.bot.CallbackQuery">CallbackQuery (class in aiotg.bot)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="aiotg.html#aiotg.bot.Bot.channel">channel() (aiotg.bot.Bot method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="aiotg.html#aiotg.chat.Chat">Chat (class in aiotg.chat)</a>
 </li>
       <li><a href="aiotg.html#aiotg.bot.Bot.command">command() (aiotg.bot.Bot method)</a>
+</li>
+      <li><a href="aiotg.html#aiotg.bot.Bot.create_webhook_app">create_webhook_app() (aiotg.bot.Bot method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -257,10 +262,10 @@
 </li>
       <li><a href="aiotg.html#aiotg.chat.Chat.send_photo">send_photo() (aiotg.chat.Chat method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="aiotg.html#aiotg.chat.Chat.send_sticker">send_sticker() (aiotg.chat.Chat method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="aiotg.html#aiotg.chat.Chat.send_text">send_text() (aiotg.chat.Chat method)</a>
 </li>
       <li><a href="aiotg.html#aiotg.chat.Chat.send_venue">send_venue() (aiotg.chat.Chat method)</a>
@@ -270,6 +275,10 @@
       <li><a href="aiotg.html#aiotg.chat.Chat.send_voice">send_voice() (aiotg.chat.Chat method)</a>
 </li>
       <li><a href="aiotg.html#aiotg.chat.Sender">Sender (class in aiotg.chat)</a>
+</li>
+      <li><a href="aiotg.html#aiotg.bot.Bot.session">session (aiotg.bot.Bot attribute)</a>
+</li>
+      <li><a href="aiotg.html#aiotg.bot.Bot.set_webhook">set_webhook() (aiotg.bot.Bot method)</a>
 </li>
       <li><a href="aiotg.html#aiotg.bot.Bot.stop">stop() (aiotg.bot.Bot method)</a>
 </li>
@@ -300,6 +309,14 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="aiotg.html#aiotg.chat.Chat.unban_chat_member">unban_chat_member() (aiotg.chat.Chat method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="W">W</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="aiotg.html#aiotg.bot.Bot.webhook_handle">webhook_handle() (aiotg.bot.Bot method)</a>
 </li>
   </ul></td>
 </tr></table>
