--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Index &#8212; aiotg 0.7.21 documentation</title>
+    <title>Index &#8212; aiotg 0.7.22 documentation</title>
     
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -15,7 +15,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0.7.21',
+        VERSION:     '0.7.22',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -68,23 +68,21 @@
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.bot.Bot.add_command">add_command() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.add_command">add_command() (aiotg.bot.Bot method)</a>
 </li>
-      <li><a href="aiotg.html#module-aiotg">aiotg (module)</a>
+      <li><a href="index.html#module-aiotg.bot">aiotg.bot (module)</a>
 </li>
-      <li><a href="aiotg.html#module-aiotg.bot">aiotg.bot (module)</a>
+      <li><a href="index.html#module-aiotg.chat">aiotg.chat (module)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#module-aiotg.chat">aiotg.chat (module)</a>
-</li>
-      <li><a href="aiotg.html#aiotg.bot.CallbackQuery.answer">answer() (aiotg.bot.CallbackQuery method)</a>
+      <li><a href="index.html#aiotg.bot.CallbackQuery.answer">answer() (aiotg.bot.CallbackQuery method)</a>
 
       <ul>
-        <li><a href="aiotg.html#aiotg.bot.InlineQuery.answer">(aiotg.bot.InlineQuery method)</a>
+        <li><a href="index.html#aiotg.bot.InlineQuery.answer">(aiotg.bot.InlineQuery method)</a>
 </li>
       </ul></li>
-      <li><a href="aiotg.html#aiotg.bot.Bot.api_call">api_call() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.api_call">api_call() (aiotg.bot.Bot method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -92,7 +90,7 @@
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.bot.Bot">Bot (class in aiotg.bot)</a>
+      <li><a href="index.html#aiotg.bot.Bot">Bot (class in aiotg.bot)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -100,19 +98,19 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.bot.Bot.callback">callback() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.callback">callback() (aiotg.bot.Bot method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.bot.CallbackQuery">CallbackQuery (class in aiotg.bot)</a>
+      <li><a href="index.html#aiotg.bot.CallbackQuery">CallbackQuery (class in aiotg.bot)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.bot.Bot.channel">channel() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.channel">channel() (aiotg.bot.Bot method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.chat.Chat">Chat (class in aiotg.chat)</a>
+      <li><a href="index.html#aiotg.chat.Chat">Chat (class in aiotg.chat)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.bot.Bot.command">command() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.command">command() (aiotg.bot.Bot method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.bot.Bot.create_webhook_app">create_webhook_app() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.create_webhook_app">create_webhook_app() (aiotg.bot.Bot method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -120,11 +118,11 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.bot.Bot.default">default() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.default">default() (aiotg.bot.Bot method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.bot.Bot.download_file">download_file() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.download_file">download_file() (aiotg.bot.Bot method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -132,15 +130,15 @@
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.bot.Bot.edit_message_reply_markup">edit_message_reply_markup() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.edit_message_reply_markup">edit_message_reply_markup() (aiotg.bot.Bot method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.bot.Bot.edit_message_text">edit_message_text() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.edit_message_text">edit_message_text() (aiotg.bot.Bot method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.chat.Chat.edit_reply_markup">edit_reply_markup() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.edit_reply_markup">edit_reply_markup() (aiotg.chat.Chat method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.chat.Chat.edit_text">edit_text() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.edit_text">edit_text() (aiotg.chat.Chat method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -148,11 +146,11 @@
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.chat.Chat.forward_message">forward_message() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.forward_message">forward_message() (aiotg.chat.Chat method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.chat.Chat.from_message">from_message() (aiotg.chat.Chat static method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.from_message">from_message() (aiotg.chat.Chat static method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -160,23 +158,23 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.chat.Chat.get_chat">get_chat() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.get_chat">get_chat() (aiotg.chat.Chat method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.chat.Chat.get_chat_administrators">get_chat_administrators() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.get_chat_administrators">get_chat_administrators() (aiotg.chat.Chat method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.chat.Chat.get_chat_member">get_chat_member() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.get_chat_member">get_chat_member() (aiotg.chat.Chat method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.chat.Chat.get_chat_members_count">get_chat_members_count() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.get_chat_members_count">get_chat_members_count() (aiotg.chat.Chat method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.bot.Bot.get_file">get_file() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.get_file">get_file() (aiotg.bot.Bot method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.bot.Bot.get_me">get_me() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.get_me">get_me() (aiotg.bot.Bot method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.bot.Bot.get_user_profile_photos">get_user_profile_photos() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.get_user_profile_photos">get_user_profile_photos() (aiotg.bot.Bot method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.bot.Bot.group">group() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.group">group() (aiotg.bot.Bot method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -184,7 +182,7 @@
 <h2 id="H">H</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.bot.Bot.handle">handle() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.handle">handle() (aiotg.bot.Bot method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -192,13 +190,13 @@
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.bot.Bot.inline">inline() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.inline">inline() (aiotg.bot.Bot method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.bot.InlineQuery">InlineQuery (class in aiotg.bot)</a>
+      <li><a href="index.html#aiotg.bot.InlineQuery">InlineQuery (class in aiotg.bot)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.chat.Chat.is_group">is_group() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.is_group">is_group() (aiotg.chat.Chat method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -206,7 +204,7 @@
 <h2 id="K">K</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.chat.Chat.kick_chat_member">kick_chat_member() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.kick_chat_member">kick_chat_member() (aiotg.chat.Chat method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -214,11 +212,11 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.bot.Bot.leave_chat">leave_chat() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.leave_chat">leave_chat() (aiotg.bot.Bot method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.bot.Bot.loop">loop() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.loop">loop() (aiotg.bot.Bot method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -226,7 +224,7 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.bot.Bot.private">private() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.private">private() (aiotg.bot.Bot method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -234,13 +232,13 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.chat.Chat.reply">reply() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.reply">reply() (aiotg.chat.Chat method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.bot.Bot.run">run() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.run">run() (aiotg.bot.Bot method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.bot.Bot.run_webhook">run_webhook() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.run_webhook">run_webhook() (aiotg.bot.Bot method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -248,41 +246,41 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.chat.Chat.send_audio">send_audio() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.send_audio">send_audio() (aiotg.chat.Chat method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.chat.Chat.send_chat_action">send_chat_action() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.send_chat_action">send_chat_action() (aiotg.chat.Chat method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.chat.Chat.send_contact">send_contact() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.send_contact">send_contact() (aiotg.chat.Chat method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.chat.Chat.send_document">send_document() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.send_document">send_document() (aiotg.chat.Chat method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.chat.Chat.send_location">send_location() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.send_location">send_location() (aiotg.chat.Chat method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.bot.Bot.send_message">send_message() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.send_message">send_message() (aiotg.bot.Bot method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.chat.Chat.send_photo">send_photo() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.send_photo">send_photo() (aiotg.chat.Chat method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.chat.Chat.send_sticker">send_sticker() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.send_sticker">send_sticker() (aiotg.chat.Chat method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.chat.Chat.send_text">send_text() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.send_text">send_text() (aiotg.chat.Chat method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.chat.Chat.send_venue">send_venue() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.send_venue">send_venue() (aiotg.chat.Chat method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.chat.Chat.send_video">send_video() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.send_video">send_video() (aiotg.chat.Chat method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.chat.Chat.send_voice">send_voice() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.send_voice">send_voice() (aiotg.chat.Chat method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.chat.Sender">Sender (class in aiotg.chat)</a>
+      <li><a href="index.html#aiotg.chat.Sender">Sender (class in aiotg.chat)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.bot.Bot.session">session (aiotg.bot.Bot attribute)</a>
+      <li><a href="index.html#aiotg.bot.Bot.session">session (aiotg.bot.Bot attribute)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.bot.Bot.set_webhook">set_webhook() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.set_webhook">set_webhook() (aiotg.bot.Bot method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.bot.Bot.stop">stop() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.stop">stop() (aiotg.bot.Bot method)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.bot.Bot.stop_webhook">stop_webhook() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.stop_webhook">stop_webhook() (aiotg.bot.Bot method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -290,17 +288,17 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.bot.TgBot">TgBot (class in aiotg.bot)</a>
+      <li><a href="index.html#aiotg.bot.TgBot">TgBot (class in aiotg.bot)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.chat.TgChat">TgChat (class in aiotg.chat)</a>
+      <li><a href="index.html#aiotg.chat.TgChat">TgChat (class in aiotg.chat)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.bot.TgInlineQuery">TgInlineQuery (class in aiotg.bot)</a>
+      <li><a href="index.html#aiotg.bot.TgInlineQuery">TgInlineQuery (class in aiotg.bot)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.chat.TgSender">TgSender (class in aiotg.chat)</a>
+      <li><a href="index.html#aiotg.chat.TgSender">TgSender (class in aiotg.chat)</a>
 </li>
-      <li><a href="aiotg.html#aiotg.bot.Bot.track">track() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.track">track() (aiotg.bot.Bot method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -308,7 +306,7 @@
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.chat.Chat.unban_chat_member">unban_chat_member() (aiotg.chat.Chat method)</a>
+      <li><a href="index.html#aiotg.chat.Chat.unban_chat_member">unban_chat_member() (aiotg.chat.Chat method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -316,7 +314,7 @@
 <h2 id="W">W</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aiotg.html#aiotg.bot.Bot.webhook_handle">webhook_handle() (aiotg.bot.Bot method)</a>
+      <li><a href="index.html#aiotg.bot.Bot.webhook_handle">webhook_handle() (aiotg.bot.Bot method)</a>
 </li>
   </ul></td>
 </tr></table>
