--- a/genindex.html
+++ b/genindex.html
@@ -122,6 +122,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#aiotg.bot.Bot.delete_webhook">delete_webhook() (aiotg.bot.Bot method)</a>
+</li>
       <li><a href="index.html#aiotg.bot.Bot.download_file">download_file() (aiotg.bot.Bot method)</a>
 </li>
   </ul></td>
