--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <p>Now run it with a proper API_TOKEN and it should reply to /echo commands.</p>
 <div class="admonition note">
 <p class="first admonition-title">Note</p>
-<p class="last">Type annotations are not required but will help you editor/IDE to provide code completion.</p>
+<p class="last">Type annotations are not required but will help your editor/IDE to provide code completion.</p>
 </div>
 <p>The example above looks like a normal synchronous code but it actually returns a coroutine.
 If you want to make an external request (and that&#8217;s what bots usually do) just use aiohttp and async/await syntax:</p>
